# capsa

./: .gitignore  CMakeLists.txt  CMakePresets.json  KnownIssue.txt  README.md  Test.ipynb  Untitled.ipynb  setup.py
capsa/: c_utils.pyi  game.py  utils.py
capsa/c_extension/include/: bot_features.h  logic.h  utils.h
capsa/c_extension/src/: bindings.cpp  logic.cpp
capsa/players/: __init__.py  abstract.py
capsa/players/bots/: __init__.py  random_bot.py  state_eval_bot.py
cpp-code/include/: logic.h  utils.h
cpp-code/src/: bindings.cpp  bot_features.cpp  logic.cpp
model/: latest.pt
py-code/: Test.ipynb  Untitled.ipynb  source.py
py-code/capsa/: __init__.py  c_utils.pyi  game.py  logging.py  utils.py
py-code/capsa/players/: __init__.py  abstract.py  human.py
py-code/capsa/players/bots/: random_bot.py  state_eval_bot.py
py-code/model_train/: __init__.py  state_eval.py
